=============

2.4.2
-----

All:

- always NUL-terminate the log messages
- wxRegEx::Compile() now calculates the number of groups correctly
- wxHTTP::GetHeader() didn't find headers which were not all in upper case
- wxHTTP input stream didn't detect EOF correctly
- wxString::find_last_of() ignored "start" parameter (Robert Vazan)
- a bug in wxArrayString::Shrink() fixed (Gunnar Roth)

All (GUI):

- rare crash in wxFontMapper fixed (Robert Vazan)
- added wxMenu::FindItemByPosition.
- copy wxImage options when copying the images

Generic:

- wxListCtrl: respect wxLC_NO_HEADER style when inserting first column

Unix:

- fixed build problems with OpenGL when libGL(U) were in different directories
- added --basename and --release flags to wx-config (Robert O'Connor)
- added support for GNU/Hurd in configure
- changed wxNativeFontInfo::FromXFontName to treat names with all
  components being empty or '*' as default font (since default font is
  converted to such a string by GetXFontName).
- wxLocale::Init now tries to set .utf8 locale in Unicode mode (Andreas Pflug)

wxGTK

- fixed compilation with --disable-compat-22
- set the event object correctly for wxMenu events (Bob Balfour)

wxMSW:

- compilation fix for VC++ command line build (missing version.mak)
- fixed release mode build with VC 7.x (Martin Ecker)
- fix iostream.h problem with VC 7.1 (it doesn't support it any longer) 
- compilation fix for XRC with mingw32

wxMotif:

- fixed "make install"

wxXRC:

- added wxNO_FULL_REPAINT_ON_RESIZE to "unknown" class handler (John Anderson)


2.4.1
-----

All:

- fixed wxLANGUAGE_CHINESE_TAIWAN to use zh_TW catalogs
- added missing wx/quantize.h to install
- improved wxScrolledWindow/sizer interaction
- fixed assert (and crash in debug) in wxFileConfigGroup::DeleteSubgroupByName
- fix for deleting entries at root level in wxFileConfig
- wxStopWatch::Start() didn't resume it contrary to the docs
- accept '\r' as delimiter when parsing dates