@@ -43,6 +43,16 @@ Returns TRUE on success, FALSE if something goes wrong
 Returns the hostname which matches the IP address.
 
 %
+% IPAddress
+%
+
+\membersection{wxIPV4address::IPAddress}
+
+\func{wxString}{IPAddress}{\void}
+
+Returns a wxString containing the IP address in dot quad (127.0.0.1) format.
+
+%
 % Service
 %
 
