@@ -174,6 +174,18 @@ unsigned short wxIPV4address::Service()
   return GAddress_INET_GetPort(m_address);
 }
 
+wxString wxIPV4address::IPAddress() const
+{
+    unsigned long raw =  GAddress_INET_GetHostAddress(m_address);
+    return wxString::Format(
+        _T("%u.%u.%u.%u"),
+        (unsigned char)(raw & 0xff),
+        (unsigned char)((raw>>8) & 0xff),
+        (unsigned char)((raw>>16) & 0xff),
+        (unsigned char)((raw>>24) & 0xff)
+        );
+}
+
 wxSockAddress *wxIPV4address::Clone() const
 {
     wxIPV4address *addr = new wxIPV4address(*this);
